Spacing corrected. Team cards renewed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,6 @@ body {
   padding: 6px 22px 6px 22px;
   font-weight: 500;
   min-height: 38px;
-
-  margin: 8px;
 }
 .btn:hover,
 .btn:focus {
@@ -108,8 +106,12 @@ img {
   line-height: 1.2;
   letter-spacing: 0.03em;
   color: #2196f3;
-  padding-top: 24px;
-  padding-bottom: 25px;
+}
+.header-logo {
+  margin-top: 24px;
+  margin-right: 93px;
+  margin-bottom: 25px;
+  margin-left: auto;
 }
 
 .studio {
@@ -118,10 +120,6 @@ img {
 
 .studio-white {
   color: var(--alt-text-cl);
-}
-.logo-spacing {
-  margin-left: auto;
-  margin-right: 93px;
 }
 
 .menu-item:not(:last-child) {
@@ -146,14 +144,13 @@ img {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 200px;
 }
 .big {
   font-size: 44px;
   line-height: 1.4;
   text-align: center;
   letter-spacing: 0.06em;
-  padding-top: 200px;
-  padding-bottom: 30px;
 }
 
 /*Кнопку в постоянный ховер*/
@@ -165,17 +162,17 @@ img {
   margin-right: auto;
   min-height: 50px;
   min-width: 200px;
+  margin-top: 30px;
 }
 
 /*Скрытый заголовок*/
 .vanish {
   display: none;
 }
-/*Преимущества-заголовки*/
+/*Преимущества*/
 
-.section {
+.section-advantages {
   padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .advantages {
@@ -196,7 +193,12 @@ img {
   margin-right: 30px;
 }
 
-/*Что делаем и команда*/
+/*Что делаем*/
+.section-activities {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .title2 {
   font-weight: 700;
   font-size: 36px;
@@ -206,9 +208,7 @@ img {
   color: var(--title-cl);
   margin-bottom: 50px;
 }
-.activities-spacing {
-  margin-top: -94px;
-}
+
 .activities-list {
   display: flex;
   flex-wrap: wrap;
@@ -220,6 +220,8 @@ img {
   margin-right: 30px;
 }
 
+/*Команда*/
+
 .team-list {
   display: flex;
   flex-wrap: wrap;
@@ -228,7 +230,7 @@ img {
 }
 
 .team-card {
-  flex-basis: calc (100% / 4 - 30px);
+  flex-basis: calc(100% / 4 - 30px);
   margin-right: 30px;
   margin-top: 30px;
 
@@ -236,6 +238,11 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+.team-card-text {
+  padding: 30px;
+  word-wrap: normal;
+}
+
 .team {
   background-color: var(--btn-bg);
   padding-top: 94px;
@@ -245,23 +252,21 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  text-align: left;
   letter-spacing: 0.03em;
   color: var(--title-cl);
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   text-align: center;
 }
 .team-position {
   font-size: 16px;
   line-height: 1.19;
-  text-align: left;
   letter-spacing: 0.03em;
-  margin-bottom: 10px;
   text-align: center;
 }
 
 .team-photo {
-  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*Футер*/
@@ -272,23 +277,36 @@ img {
   padding-top: 60px;
 }
 
+.footer-logo {
+}
 .address-white {
   color: var(--alt-text-cl);
+  margin-top: 20px;
 }
 
-.address {
-  padding-top: 20px;
+.footer-mail {
+  margin-top: 9px;
 }
 
-.footer-link {
-  padding-top: 9px;
+.footer-phone {
+  margin-top: 9px;
 }
 /*Portfolio*/
+.section-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .filter {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
+}
+.filter > li {
+  margin-right: 8px;
+}
+.filter :last-child {
+  margin-right: 0;
 }
 
 .project-name {
